# basic-cs

./: .gitignore  README.md  curriculum_qna.md  requirements.txt  setup.cfg
algorithms/: graphs.py  searching.py  sorting.py
data_structures/: binary_search_tree.py  linked_list.py  stack_queue.py
tests/: test_algorithms.py  test_data_structures.py
